--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@
           <section>
 					<h2>Flask</h2>
 					<p>
-            <img src="http://imgs.xkcd.com/comics/python.png" style="height: 400px">
-            <small>
               <ul>
                 <li>a Python micro-framework, like Django but distilled down</li>
                 <li>core is light</li>
@@ -111,8 +109,11 @@
                     <li>http://flask.pocoo.org/extensions/</li>
                   </ul>
               </ul>
-            </small>
 					</p>
+          </section>
+          <section>
+            <h2>Python</h2>
+            <img src="http://imgs.xkcd.com/comics/python.png" style="height: 400px">
           </section>
           <section data-markdown>
             ```Python
@@ -123,15 +124,15 @@
             def hello():
                 return "Hello World!"
 
-                if __name__ == "__main__":
-                    app.run()
+            if __name__ == "__main__":
+                app.run()
             ```
           </section>
           <section>
             <h3>Routing</h3>
             <ul>
-              <li>match a URL with HTTP method(s) and handler</li>
-              <li>returns a HTTP response and status code</li>
+              <li>match an user HTTP request to a URL with a handler function</li>
+              <li>return a HTTP response and status code</li>
             </ul>
           </section>
           <section>
@@ -304,7 +305,7 @@ if __name__ == '__main__':
 				history: true,
 				center: true,
 
-				transition: 'convex', // none/fade/slide/convex/concave/zoom
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
